# wxPad

./: CMakeLists.txt  README.md  build_debug.bat  run_debug.bat  win_run_debug.bat
src/: CMakeLists.txt  TextFrame.cpp  TextFrame.h  main.cpp  main.h
